<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="start">

        <TextView
            android:id="@+id/info_lap"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_distance_24"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/info_distance_lap"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="start">

        <TextView
            android:id="@+id/info_travelled"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_sport_24"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/info_travelled"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="end">

        <TextView
            android:id="@+id/info_pace"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_pace_24"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/info_pace"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
